fix some bugs 🐛   and alignment problems

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,10 +97,10 @@ table {
      
     }
 
-
-    body, html {
-      width: 100%;
-      overflow-x: hidden;
+    main {
+      
+        margin: 0 auto;
+      
     }
 
 
@@ -118,7 +118,6 @@ table {
   background-color: var(--primary-color);
   color: var(--secondary-color);
   padding: 1.5em;
- 
 }
 
   
@@ -176,7 +175,7 @@ table {
     background-color: transparent;
     border: none;
     cursor: pointer;
-    margin-left: 5px;
+    margin-left: 10px;
     font-size: 20px;
     color: var(--secondary-color);
   }
@@ -285,19 +284,22 @@ table {
     display: none;
 }
 
-.portfolio-heading h2 {
-  width: 100%;
-  text-align: center; 
-  padding: 1em 0;
-  margin: 0;
+
+
+.section-heading {
+  text-align: center;
+  margin: 80px 0 50px 0;
+}
+
+.section-heading h2 {
   font-size: 2em;
 }
 
-
- .portfolio-items-wrapper{
-  margin: 0;
-  padding: 0 100px;
+ .portfolio-grid {
+  margin: 0 10%;
+  padding: 0;
   display: grid;
+  gap: 30px 0;
   grid-template-columns: repeat(3, minmax(350px, 1fr));
   grid-auto-rows: auto;
   overflow-x: hidden;
@@ -305,21 +307,16 @@ table {
   scrollbar-color: #888 #f0f0f0;
   -webkit-overflow-scrolling: touch; /* for mobile devices */
   justify-items: center; 
-  align-items: center; 
+  align-items: start; 
 }
 
 .portfolio-item {
   display: flex;
-  flex-direction: column; /* stacks the img, title, and description vertically */
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between; /* distributes space evenly between items for images too */
+  justify-content: space-between;
   width: 350px;
-  height: 350px;
-  padding: 175px 25px;
-  padding-top: 50px;
-  overflow: hidden;
   border-radius: 8px;
- 
   color: #333;
 }
 
@@ -332,7 +329,7 @@ table {
   font-size: 1.2rem;
   color: var(--primary-color); 
   display: flex;
-  margin-top: 30px; 
+  margin-top: 20px; 
 }
 
 body.dark-mode .portfolio-title {
@@ -351,31 +348,20 @@ body.dark-mode .portfolio-title {
 
 .about-container {
   display: flex;
-  flex-direction: column;  /* Align items in a column */
-  align-items:center; 
-  justify-content: center;
-  width: 100%;
-  margin: 4em auto;
-  padding: 0;
-}
-
-.about-heading {
-  width: 100%;
-  text-align: center; 
-  margin: 1em auto;
-  font-size: 2em;
+  flex-direction: column;
+  align-items: center;
 }
 
 .about-grid {
-  padding: 20px;
+  
   display: grid;
-  grid-template-columns: 1fr 1fr; 
-  grid-gap: 10%
+  grid-template-columns: repeat(2, 1fr); /* Create two equally wide columns */
+  gap: 2em; /* Add some space between columns */
+ 
 }
 
 .about-img img {
-  max-width: 500px;
-  width: 100%; 
+  max-width: 500px; 
   height: auto;
 }
 
@@ -386,13 +372,15 @@ body.dark-mode .portfolio-title {
 }
 
 .about-text {
-  max-width: 500px;
+  max-width: 550px;
+  
 }
 
+
 .about-text p {
-  font-size: 1.02em;
+  font-size: 1.2em;
   line-height: 1.5;
-  margin-bottom: 1.5em;
+  margin-bottom: 2em;
   word-wrap: normal;
 }
 
@@ -400,21 +388,20 @@ body.dark-mode .portfolio-title {
 .about-text p:first-of-type::first-letter {
   font-size: 300%;
   float: left;
-  padding-right: 5px;
-  line-height: 1; 
+  padding: 5px 10px 0 0;
+  line-height: .8; 
 }
 
 .about-text p:first-of-type {
   clear: both;
 }
 
-
 /* contact section */
 
 .contact-container {
   max-width: 500px;
-  margin: 2em auto;
-  padding: 2em;
+  margin: 3em auto;
+  padding: 3em ;
 }
 
 .contact-container h2 {
